# sbb_standalone_textline_detector

./: README.md  pyproject.toml  requirements.txt
src/sbb_standalone_textline/: cli.py  ocrd-tool.json  sbb_standalone_textline.py
src/sbb_standalone_textline.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/sbb_standalone_textline/utils/: __init__.py
