[build-system]
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "sbb_standalone_textline"
authors = [
    {name = "Vahid Rezanezhad"},
    {name = "Staatsbibliothek zu Berlin - Preußischer Kulturbesitz"},
]
description = "Textline detector for complex documents"
readme = "README.md"
license.file = "LICENSE"
requires-python = ">=3.8"
keywords = ["document layout analysis", "textline detetcion"]

dynamic = ["dependencies", "version"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Image Processing",
]


[project.scripts]
sbb_standalone_textline = "sbb_standalone_textline.cli:main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.json", '*.yml', '*.xml', '*.xsd']
